Fix cut off emoji in media box caption

--- a/src/sass/components/_mediabox.scss
+++ b/src/sass/components/_mediabox.scss
@@ -99,6 +99,7 @@ mediabox {
                 overflow: hidden;
                 white-space: nowrap;
                 text-overflow: ellipsis;
+                line-height: 1.3em;
             }
         }
     }
